// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  click me please
</div>
`;

exports[`matches snapshot2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  save
</div>
`;
